# ProyectoAB

./: CMakeLists.txt  CitaMedica.cpp  CitaMedica.h  GestorArchivo.cpp  GestorArchivo.h  GestorDatos.cpp  GestorDatos.h  IGestionable.h  IMedicoFunciones.h  IMedicoRepositorio.h  IPersona.h  IRepositorio.h  Medico.cpp  Medico.h  MedicoRepositorioArchivo.cpp  MedicoRepositorioArchivo.h  Paciente.cpp  Paciente.h  ProyectoAB.cpp  ProyectoAB.h  README.md
